Se agrega Sentiment Analysis

--- a/src/Experiments.Api/appsettings.json
+++ b/src/Experiments.Api/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ML": {
+    "SentimentAnalysis": {
+      "ModelPath": "ML/SentimentAnalysis/SentimentAnalysisModel.zip"
+    }
+  },
   "AllowedHosts": "*"
 }
