--- a/src/Experiments.Api/Experiments.Api.csproj
+++ b/src/Experiments.Api/Experiments.Api.csproj
@@ -5,7 +5,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.ML" Version="1.5.0" />
+    <PackageReference Include="Microsoft.ML" Version="1.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Experiments.Shared\Experiments.Shared.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="ML\SentimentAnalysis\Data\" />
   </ItemGroup>
 
 
